# FastApi_vod

./: .gitignore  README.md  main.py  pyproject.toml  test.sh  test_tamp.py  test_temp.py
.github/workflows/: ci.yml
app/: __init__.py
app/apis/v1/: meeting_router.py  participant_router.py
app/configs/: __init__.py  base_config.py  tortoise_config.py
app/dtos/: create_meeting_response.py  create_participant_request.py  create_participant_response.py  frozen_config.py  get_meeting_response.py  update_meeting_request.py
app/queries/meeting/: create_meeting.edgeql  get_meeting_by_url_code.edgeql  get_meeting_by_url_code_async_edgeql.py  models.py  update_meeting_location.edgeql  update_meeting_location_async_edgeql.py  update_meeting_start_end.edgeql  update_meeting_start_end_async_edgeql.py  update_meeting_start_end_async_edgeql.py   update_meeting_title.edgeql  update_meeting_title_async_edgeql.py
app/services/: meeting_service_edgedb.py  meeting_service_mysql.py
app/tests/apis/v1/: test_meeting_router_edgedb.py  test_meeting_router_mysql.py
app/tortoise_models/: base_model.py  meeting.py
app/utils/: base62.py  edge.py  squids.py
dbschema/: default.gel
dbschema/migrations/: 00001-m1xg2zz.edgeql  00002-m1eyftl.edgeql  00003-m1rsnc7.edgeql  00004-m1lthky.edgeql  00005-m1l7fq2.edgeql  00006-m1t6yoe.edgeql
queries/meeting/: create_meeting_async_edgeql.py
