[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["zzinypark <zzinypark21@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"


[tool.poetry.group.dev.dependencies]
black = "24.10.0"
ruff = "0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[too.ruff]
target-vresion = "py313"